ReminderParser.java
// Generated from Reminder.g4 by ANTLR 4.6
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ReminderParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.6", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, BLOCK_COMMENT=19, LINE_COMMENT=20, SS=21, DAYS=22, SHOWALL=23, 
		EVENT=24, PRINT=25, TO=26, IF=27, ACC=28, DATALIST=29, SM=30, I=31, ZERO=32, 
		FOR=33, DASH=34, UDS=35, ANS=36, OPAREN=37, CPAREN=38, OBRACE=39, CBRACE=40, 
		ID=41, STRING=42, WS=43;
	public static final int
		RULE_start = 0, RULE_prog = 1, RULE_create = 2, RULE_idn = 3, RULE_name = 4, 
		RULE_content = 5, RULE_date = 6, RULE_repeat = 7, RULE_edit = 8, RULE_modify = 9, 
		RULE_new_name = 10, RULE_new_content = 11, RULE_new_date = 12, RULE_new_repeat = 13, 
		RULE_delete = 14, RULE_delete_id = 15, RULE_for_stat = 16, RULE_for_name = 17, 
		RULE_init = 18, RULE_control = 19, RULE_acc = 20, RULE_if_stat = 21, RULE_close = 22, 
		RULE_search = 23, RULE_if_search = 24, RULE_to = 25, RULE_if_name = 26, 
		RULE_first_date = 27, RULE_last_date = 28, RULE_print_out = 29, RULE_print = 30, 
		RULE_show_all = 31, RULE_cbrace = 32, RULE_print_all = 33, RULE_remind = 34, 
		RULE_remind_day = 35, RULE_if_remind = 36, RULE_col = 37, RULE_sem = 38, 
		RULE_com = 39;
	public static final String[] ruleNames = {
		"start", "prog", "create", "idn", "name", "content", "date", "repeat", 
		"edit", "modify", "new_name", "new_content", "new_date", "new_repeat", 
		"delete", "delete_id", "for_stat", "for_name", "init", "control", "acc", 
		"if_stat", "close", "search", "if_search", "to", "if_name", "first_date", 
		"last_date", "print_out", "print", "show_all", "cbrace", "print_all", 
		"remind", "remind_day", "if_remind", "col", "sem", "com"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'CREATE'", "'ID'", "'NAME'", "'CONTENT'", "'REMIND_DATE'", "'REPEAT'", 
		"'EDIT'", "'NEW_NAME'", "'NEW_CONTENT'", "'NEW_DATE'", "'NEW_REPEAT'", 
		"'DELETE'", "'SEARCH'", "'PRINT'", "'REMIND'", "':'", "';'", "','", null, 
		null, "'**'", "'days'", "'show all'", "'event'", "'print'", "'to'", "'if'", 
		"'i++'", "'datalist'", "'<'", "'i'", "'0'", "'for'", "'-'", "'_'", null, 
		"'('", "')'", "'{'", "'}'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, "BLOCK_COMMENT", "LINE_COMMENT", 
		"SS", "DAYS", "SHOWALL", "EVENT", "PRINT", "TO", "IF", "ACC", "DATALIST", 
		"SM", "I", "ZERO", "FOR", "DASH", "UDS", "ANS", "OPAREN", "CPAREN", "OBRACE", 
		"CBRACE", "ID", "STRING", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Reminder.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ReminderParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class StartContext extends ParserRuleContext {
		public List<ProgContext> prog() {
			return getRuleContexts(ProgContext.class);
		}
		public ProgContext prog(int i) {
			return getRuleContext(ProgContext.class,i);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReminderListener ) ((ReminderListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReminderListener ) ((ReminderListener)listener).exitStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReminderVisitor ) return ((ReminderVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(80);
				prog();
				}
				}
				setState(83); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__6) | (1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__14))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgContext extends ParserRuleContext {
		public CreateContext create() {
			return getRuleContext(CreateContext.class,0);
		}
		public EditContext edit() {
			return getRuleContext(EditContext.class,0);
		}
		public DeleteContext delete() {
			return getRuleContext(DeleteContext.class,0);
		}
		public RemindContext remind() {
			return getRuleContext(RemindContext.class,0);
		}
		public SearchContext search() {
			return getRuleContext(SearchContext.class,0);
		}
		public PrintContext print() {
			return getRuleContext(PrintContext.class,0);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReminderListener ) ((ReminderListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReminderListener ) ((ReminderListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReminderVisitor ) return ((ReminderVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_prog);
		try {
			setState(91);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				enterOuterAlt(_localctx, 1);
				{
				setState(85);
				create();
				}
				break;
			case T__6:
				enterOuterAlt(_localctx, 2);
				{
				setState(86);
				edit();
				}
				break;
			case T__11:
				enterOuterAlt(_localctx, 3);
				{
				setState(87);
				delete();
				}
				break;
			case T__14:
				enterOuterAlt(_localctx, 4);
				{
				setState(88);
				remind();
				}
				break;
			case T__12:
				enterOuterAlt(_localctx, 5);
				{
				setState(89);
				search();
				}
				break;
			case T__13:
				enterOuterAlt(_localctx, 6);
				{
				setState(90);
				print();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CreateContext extends ParserRuleContext {
		public TerminalNode OBRACE() { return getToken(ReminderParser.OBRACE, 0); }
		public IdnContext idn() {
			return getRuleContext(IdnContext.class,0);
		}
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public ContentContext content() {
			return getRuleContext(ContentContext.class,0);
		}
		public DateContext date() {
			return getRuleContext(DateContext.class,0);
		}
		public RepeatContext repeat() {
			return getRuleContext(RepeatContext.class,0);
		}
		public TerminalNode CBRACE() { return getToken(ReminderParser.CBRACE, 0); }
		public CreateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_create; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReminderListener ) ((ReminderListener)listener).enterCreate(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReminderListener ) ((ReminderListener)listener).exitCreate(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReminderVisitor ) return ((ReminderVisitor<? extends T>)visitor).visitCreate(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CreateContext create() throws RecognitionException {
		CreateContext _localctx = new CreateContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_create);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			match(T__0);
			setState(94);
			match(OBRACE);
			setState(95);
			idn();
			setState(96);
			name();
			setState(97);
			content();
			setState(98);
			date();
			setState(99);
			repeat();
			setState(100);
			match(CBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdnContext extends ParserRuleContext {
		public ColContext col() {
			return getRuleContext(ColContext.class,0);
		}
		public TerminalNode ID() { return getToken(ReminderParser.ID, 0); }
		public SemContext sem() {
			return getRuleContext(SemContext.class,0);
		}
		public IdnContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_idn; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReminderListener ) ((ReminderListener)listener).enterIdn(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReminderListener ) ((ReminderListener)listener).exitIdn(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReminderVisitor ) return ((ReminderVisitor<? extends T>)visitor).visitIdn(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdnContext idn() throws RecognitionException {
		IdnContext _localctx = new IdnContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_idn);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			match(T__1);
			setState(103);
			col();
			setState(104);
			match(ID);
			setState(105);
			sem();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NameContext extends ParserRuleContext {
		public TerminalNode UDS() { return getToken(ReminderParser.UDS, 0); }
		public TerminalNode ID() { return getToken(ReminderParser.ID, 0); }
		public ColContext col() {
			return getRuleContext(ColContext.class,0);
		}
		public TerminalNode STRING() { return getToken(ReminderParser.STRING, 0); }
		public SemContext sem() {
			return getRuleContext(SemContext.class,0);
		}
		public NameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReminderListener ) ((ReminderListener)listener).enterName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReminderListener ) ((ReminderListener)listener).exitName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReminderVisitor ) return ((ReminderVisitor<? extends T>)visitor).visitName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NameContext name() throws RecognitionException {
		NameContext _localctx = new NameContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			match(T__2);
			setState(108);
			match(UDS);
			setState(109);
			match(ID);
			setState(110);
			col();
			setState(111);
			match(STRING);
			setState(112);
			sem();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ContentContext extends ParserRuleContext {
		public TerminalNode UDS() { return getToken(ReminderParser.UDS, 0); }
		public TerminalNode ID() { return getToken(ReminderParser.ID, 0); }
		public ColContext col() {
			return getRuleContext(ColContext.class,0);
		}
		public TerminalNode STRING() { return getToken(ReminderParser.STRING, 0); }
		public SemContext sem() {
			return getRuleContext(SemContext.class,0);
		}
		public ContentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_content; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReminderListener ) ((ReminderListener)listener).enterContent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReminderListener ) ((ReminderListener)listener).exitContent(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReminderVisitor ) return ((ReminderVisitor<? extends T>)visitor).visitContent(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ContentContext content() throws RecognitionException {
		ContentContext _localctx = new ContentContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_content);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			match(T__3);
			setState(115);
			match(UDS);
			setState(116);
			match(ID);
			setState(117);
			col();
			setState(118);
			match(STRING);
			setState(119);
			sem();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DateContext extends ParserRuleContext {
		public TerminalNode UDS() { return getToken(ReminderParser.UDS, 0); }
		public TerminalNode ID() { return getToken(ReminderParser.ID, 0); }
		public ColContext col() {
			return getRuleContext(ColContext.class,0);
		}
		public TerminalNode STRING() { return getToken(ReminderParser.STRING, 0); }
		public SemContext sem() {
			return getRuleContext(SemContext.class,0);
		}
		public DateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_date; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReminderListener ) ((ReminderListener)listener).enterDate(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReminderListener ) ((ReminderListener)listener).exitDate(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReminderVisitor ) return ((ReminderVisitor<? extends T>)visitor).visitDate(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DateContext date() throws RecognitionException {
		DateContext _localctx = new DateContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_date);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			match(T__4);
			setState(122);
			match(UDS);
			setState(123);
			match(ID);
			setState(124);
			col();
			setState(125);
			match(STRING);
			setState(126);
			sem();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RepeatContext extends ParserRuleContext {
		public TerminalNode UDS() { return getToken(ReminderParser.UDS, 0); }
		public TerminalNode ID() { return getToken(ReminderParser.ID, 0); }
		public ColContext col() {
			return getRuleContext(ColContext.class,0);
		}
		public TerminalNode ANS() { return getToken(ReminderParser.ANS, 0); }
		public SemContext sem() {
			return getRuleContext(SemContext.class,0);
		}
		public RepeatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_repeat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReminderListener ) ((ReminderListener)listener).enterRepeat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReminderListener ) ((ReminderListener)listener).exitRepeat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReminderVisitor ) return ((ReminderVisitor<? extends T>)visitor).visitRepeat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RepeatContext repeat() throws RecognitionException {
		RepeatContext _localctx = new RepeatContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_repeat);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			match(T__5);
			setState(129);
			match(UDS);
			setState(130);
			match(ID);
			setState(131);
			col();
			setState(132);
			match(ANS);
			setState(133);
			sem();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EditContext extends ParserRuleContext {
		public List<TerminalNode> OBRACE() { return getTokens(ReminderParser.OBRACE); }
		public TerminalNode OBRACE(int i) {
			return getToken(ReminderParser.OBRACE, i);
		}
		public For_statContext for_stat() {
			return getRuleContext(For_statContext.class,0);
		}
		public If_statContext if_stat() {
			return getRuleContext(If_statContext.class,0);
		}
		public CloseContext close() {
			return getRuleContext(CloseContext.class,0);
		}
		public TerminalNode CBRACE() { return getToken(ReminderParser.CBRACE, 0); }
		public List<ModifyContext> modify() {
			return getRuleContexts(ModifyContext.class);
		}
		public ModifyContext modify(int i) {
			return getRuleContext(ModifyContext.class,i);
		}
		public EditContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_edit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReminderListener ) ((ReminderListener)listener).enterEdit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReminderListener ) ((ReminderListener)listener).exitEdit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReminderVisitor ) return ((ReminderVisitor<? extends T>)visitor).visitEdit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EditContext edit() throws RecognitionException {
		EditContext _localctx = new EditContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_edit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			match(T__6);
			setState(136);
			match(OBRACE);
			setState(137);
			for_stat();
			setState(138);
			match(OBRACE);
			setState(139);
			if_stat();
			setState(140);
			match(OBRACE);
			setState(142); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(141);
				modify();
				}
				}
				setState(144); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__10))) != 0) );
			setState(146);
			close();
			setState(147);
			match(CBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ModifyContext extends ParserRuleContext {
		public New_nameContext new_name() {
			return getRuleContext(New_nameContext.class,0);
		}
		public New_contentContext new_content() {
			return getRuleContext(New_contentContext.class,0);
		}
		public New_dateContext new_date() {
			return getRuleContext(New_dateContext.class,0);
		}
		public New_repeatContext new_repeat() {
			return getRuleContext(New_repeatContext.class,0);
		}
		public ModifyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_modify; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReminderListener ) ((ReminderListener)listener).enterModify(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReminderListener ) ((ReminderListener)listener).exitModify(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReminderVisitor ) return ((ReminderVisitor<? extends T>)visitor).visitModify(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ModifyContext modify() throws RecognitionException {
		ModifyContext _localctx = new ModifyContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_modify);
		try {
			setState(153);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__7:
				enterOuterAlt(_localctx, 1);
				{
				setState(149);
				new_name();
				}
				break;
			case T__8:
				enterOuterAlt(_localctx, 2);
				{
				setState(150);
				new_content();
				}
				break;
			case T__9:
				enterOuterAlt(_localctx, 3);
				{
				setState(151);
				new_date();
				}
				break;
			case T__10:
				enterOuterAlt(_localctx, 4);
				{
				setState(152);
				new_repeat();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class New_nameContext extends ParserRuleContext {
		public TerminalNode UDS() { return getToken(ReminderParser.UDS, 0); }
		public TerminalNode ID() { return getToken(ReminderParser.ID, 0); }
		public ColContext col() {
			return getRuleContext(ColContext.class,0);
		}
		public TerminalNode STRING() { return getToken(ReminderParser.STRING, 0); }
		public SemContext sem() {
			return getRuleContext(SemContext.class,0);
		}
		public New_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_new_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReminderListener ) ((ReminderListener)listener).enterNew_name(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReminderListener ) ((ReminderListener)listener).exitNew_name(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReminderVisitor ) return ((ReminderVisitor<? extends T>)visitor).visitNew_name(this);
			else return visitor.visitChildren(this);
		}
	}

	public final New_nameContext new_name() throws RecognitionException {
		New_nameContext _localctx = new New_nameContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_new_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(155);
			match(T__7);
			setState(156);
			match(UDS);
			setState(157);
			match(ID);
			setState(158);
			col();
			setState(159);
			match(STRING);
			setState(160);
			sem();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class New_contentContext extends ParserRuleContext {
		public TerminalNode UDS() { return getToken(ReminderParser.UDS, 0); }
		public TerminalNode ID() { return getToken(ReminderParser.ID, 0); }
		public ColContext col() {
			return getRuleContext(ColContext.class,0);
		}
		public TerminalNode STRING() { return getToken(ReminderParser.STRING, 0); }
		public SemContext sem() {
			return getRuleContext(SemContext.class,0);
		}
		public New_contentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_new_content; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReminderListener ) ((ReminderListener)listener).enterNew_content(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReminderListener ) ((ReminderListener)listener).exitNew_content(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReminderVisitor ) return ((ReminderVisitor<? extends T>)visitor).visitNew_content(this);
			else return visitor.visitChildren(this);
		}
	}

	public final New_contentContext new_content() throws RecognitionException {
		New_contentContext _localctx = new New_contentContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_new_content);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(162);
			match(T__8);
			setState(163);
			match(UDS);
			setState(164);
			match(ID);
			setState(165);
			col();
			setState(166);
			match(STRING);
			setState(167);
			sem();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class New_dateContext extends ParserRuleContext {
		public TerminalNode UDS() { return getToken(ReminderParser.UDS, 0); }
		public TerminalNode ID() { return getToken(ReminderParser.ID, 0); }
		public ColContext col() {
			return getRuleContext(ColContext.class,0);
		}
		public TerminalNode STRING() { return getToken(ReminderParser.STRING, 0); }
		public SemContext sem() {
			return getRuleContext(SemContext.class,0);
		}
		public New_dateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_new_date; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReminderListener ) ((ReminderListener)listener).enterNew_date(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReminderListener ) ((ReminderListener)listener).exitNew_date(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReminderVisitor ) return ((ReminderVisitor<? extends T>)visitor).visitNew_date(this);
			else return visitor.visitChildren(this);
		}
	}

	public final New_dateContext new_date() throws RecognitionException {
		New_dateContext _localctx = new New_dateContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_new_date);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(169);
			match(T__9);
			setState(170);
			match(UDS);
			setState(171);
			match(ID);
			setState(172);
			col();
			setState(173);
			match(STRING);
			setState(174);
			sem();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
